# study_tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: ac14dccb75a0_create_subjects_table.py
src/: database.py  main.py
src/subjects/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  factories.py  test_db.py  test_subjects.py
