[tool.poetry]
name = "study-tracker"
version = "0.1.0"
description = ""
authors = ["gabriel chaves <gabrieloliveirachaves754@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
alembic = "^1.13.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"
pytest = "^8.2.2"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.7"
httpx = "^0.27.0"
factory-boy = "^3.3.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']



[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']



[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
